auto publishing updates to notebooks

--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b0462cdb",
+   "id": "9be7f781",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d364328a",
+   "id": "adb8c34d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16fe3bde",
+   "id": "081b1181",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844011a4",
+   "id": "47ff6031",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f77c1a",
+   "id": "148af434",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18f5a94b",
+   "id": "5de9ccdc",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baae921b",
+   "id": "969aaab0",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d2b190",
+   "id": "0fe5547f",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8752d6",
+   "id": "0f196a66",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1604372b",
+   "id": "86ada862",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "629d3b58",
+   "id": "28d90124",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c3e49f",
+   "id": "ce513c8f",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4160aa",
+   "id": "1876855e",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095e53f8",
+   "id": "741246dd",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b17c335",
+   "id": "b349e05d",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4b63bc5",
+   "id": "5c868000",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c025a5",
+   "id": "30ec2edf",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53464900",
+   "id": "75cd174f",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "293c76fc",
+   "id": "fc7cc91f",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfeaf37b",
+   "id": "4d1c3936",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46b6245d",
+   "id": "33256b86",
    "metadata": {
     "hide-output": false
    },
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6503e133",
+   "id": "b732837a",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4e07c8",
+   "id": "65b93b27",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96816434",
+   "id": "0846077d",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d3dd03",
+   "id": "34e0efc5",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a502b4b2",
+   "id": "5de69785",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "946d4e93",
+   "id": "a5ef63c3",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34caaac1",
+   "id": "715c469f",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9318966b",
+   "id": "d5e6faac",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68868edb",
+   "id": "84a36950",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b84327",
+   "id": "91d77475",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fbe6dae",
+   "id": "1da0b719",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f149423b",
+   "id": "0f35f14c",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ced41d1f",
+   "id": "a2aed4a7",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7412233",
+   "id": "a2d8dfc4",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891991f1",
+   "id": "e898b088",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a087cc75",
+   "id": "3aac2f95",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab09854",
+   "id": "07870889",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a681cd2",
+   "id": "d65f9867",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07de3e64",
+   "id": "e3de8b25",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65255b3b",
+   "id": "d01a4261",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ecef61",
+   "id": "565d2957",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3f76b70",
+   "id": "b19dcfd4",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be39b79a",
+   "id": "c980e1c0",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9748881e",
+   "id": "83210b31",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2f2207a",
+   "id": "2b53562e",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb013037",
+   "id": "61e1b458",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7a28798",
+   "id": "18e28ae3",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fc3587",
+   "id": "94091654",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a2d2f4",
+   "id": "55be85ff",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c8206d",
+   "id": "7d6a1155",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87820d0c",
+   "id": "f951038c",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cf576d1",
+   "id": "6339aca8",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea2e7e2",
+   "id": "3d781eea",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b40bbabb",
+   "id": "2e767217",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89340c6",
+   "id": "8c92b43c",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695f6aab",
+   "id": "47abc83e",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f5925a6",
+   "id": "05c17c38",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee207472",
+   "id": "3ca79119",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba68e06",
+   "id": "00aa422b",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58cfa3a1",
+   "id": "243ff792",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de1a6039",
+   "id": "c8c9d6ec",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3fa3705",
+   "id": "29eb8db6",
    "metadata": {
     "hide-output": false
    },
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "388e3fa5",
+   "id": "ee135d1d",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +918,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288151.717991,
+  "date": 1761799603.3878691,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
