--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e2ff1d6",
+   "id": "b2ca9a38",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63481f77",
+   "id": "8bc4ab4c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "103b00b6",
+   "id": "28bc025d",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1f28f9",
+   "id": "f06ad85a",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "384a5f99",
+   "id": "c57464d4",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137854b7",
+   "id": "0152ef0d",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "972f13fc",
+   "id": "b072f6c5",
    "metadata": {},
    "source": [
     "## The Model"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5a21aa7",
+   "id": "b0b4b1c4",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aadf9f0",
+   "id": "7b7282cf",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -175,7 +175,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-3ea43d1d-ac7b-47cb-a027-fbe6d0d5e3c9'></a>\n",
+    "<a id='equation-902a1d45-7fc4-42e6-8e01-8c53f81d23c4'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -188,7 +188,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-6d1ef095-1b1d-4055-843b-ff04914cd4c6'></a>\n",
+    "<a id='equation-6fd4a653-6579-4d4d-83f0-4b0312a7b525'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5be3b642",
+   "id": "7f253af2",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +242,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-5cb7db07-22f8-4909-846f-7e68a30cf9b1'></a>\n",
+    "<a id='equation-8e78b3bb-6756-4992-ac8e-6e38d7cae308'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -252,7 +252,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-8699c27e-f35e-47b8-b3dd-302d5683c93f'></a>\n",
+    "<a id='equation-1a95a27d-7d9d-4e0c-8349-9819a02620ae'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -266,7 +266,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-94b76718-4198-4854-9019-153eb34ac593'></a>\n",
+    "<a id='equation-19264ee0-0a7e-49a7-9f68-1bfb37a5d6cc'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -276,7 +276,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-460ce2fc-d616-4207-8c42-4c2a8c30e6f1'></a>\n",
+    "<a id='equation-50f60c51-8079-4cf5-9ba5-da1514501c03'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a421382e",
+   "id": "33dce858",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -301,7 +301,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-0b7d0d05-b769-4507-98ba-2753dd3620ea'></a>\n",
+    "<a id='equation-b33c7cef-fd29-4225-82bc-3308c8931d7d'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -313,7 +313,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-81ad551c-2c09-4174-96cb-6b12cdf70284'></a>\n",
+    "<a id='equation-c7fae860-ecc7-440e-8a39-cb3e7b11bcc7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac5343f3",
+   "id": "11c2f0ee",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fbc5318",
+   "id": "f0b14687",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e64ad46",
+   "id": "f3e8035e",
    "metadata": {
     "hide-output": false
    },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae7be46c",
+   "id": "3d4475bb",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27412692",
+   "id": "f8a6c97f",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a51d57",
+   "id": "723cd8d5",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ab8c0df",
+   "id": "4138f49e",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b974ef82",
+   "id": "fe3e80a9",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82ec1286",
+   "id": "d6514b65",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "837dc8f0",
+   "id": "37635b00",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20913090",
+   "id": "20efdf33",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c301be6f",
+   "id": "7a2e022e",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ade633bd",
+   "id": "fc5e7590",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5248ce65",
+   "id": "3e908511",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d1e642",
+   "id": "eabf6dfa",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c0acaba",
+   "id": "a6268b49",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e15073",
+   "id": "b78026c5",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea3120de",
+   "id": "4d17a839",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a34a92",
+   "id": "bf4d2c4b",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4de0493",
+   "id": "7306b43c",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4648d73f",
+   "id": "81d650db",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4dc07ed",
+   "id": "eb7bccbd",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a8e220",
+   "id": "b9bcf73d",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48904bc5",
+   "id": "b6de79d6",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9798f38",
+   "id": "935d1196",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd9ba73",
+   "id": "c4c236c0",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6376e05f",
+   "id": "21e4d134",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef0503e4",
+   "id": "0d215a6c",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fb659b",
+   "id": "645ac325",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ae9a15",
+   "id": "537289ac",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44cd4938",
+   "id": "643c139b",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f3837dc",
+   "id": "84ee1c9b",
    "metadata": {
     "hide-output": false
    },
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab664ee6",
+   "id": "c5eec452",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a1f1725",
+   "id": "bf4c4a1a",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edcd27c8",
+   "id": "be851d48",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5665c239",
+   "id": "2e97f795",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d16c14",
+   "id": "a7890b85",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e50cd2d1",
+   "id": "6f131904",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fc83c9d",
+   "id": "bb24c74d",
    "metadata": {
     "hide-output": false
    },
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3007fa49",
+   "id": "a9c537d5",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b42ae5",
+   "id": "ef4d4846",
    "metadata": {
     "hide-output": false
    },
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "862805b8",
+   "id": "83cd8618",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "910ecfc9",
+   "id": "54baf30b",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "170059c5",
+   "id": "d1e55813",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df1f4d55",
+   "id": "3203f357",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d821fb6e",
+   "id": "b59e9c43",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c790579f",
+   "id": "320fe406",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd150a14",
+   "id": "136b8eb8",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e405a5a7",
+   "id": "12d61b6b",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c8719d",
+   "id": "0a7914a0",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1804687b",
+   "id": "8520582d",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9f13adc",
+   "id": "d0bd854f",
    "metadata": {
     "hide-output": false
    },
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afe7e6a4",
+   "id": "25e4de66",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2be6f58",
+   "id": "252610b0",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28febc74",
+   "id": "1904201f",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d3d4e15",
+   "id": "1af5e079",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa0a7c4a",
+   "id": "1cc56885",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae943db3",
+   "id": "1d640df3",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4071ddbc",
+   "id": "e84be363",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e84242ad",
+   "id": "af0bf85a",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e43bcb",
+   "id": "b25982ad",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6e538c",
+   "id": "dd7dd3bf",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc494875",
+   "id": "0d82af01",
    "metadata": {
     "hide-output": false
    },
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5daadd7a",
+   "id": "706fa4ef",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d7e34f",
+   "id": "18112dee",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77997cad",
+   "id": "bd12f5a8",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb892416",
+   "id": "4998b06c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af4f3a19",
+   "id": "db10f206",
    "metadata": {
     "hide-output": false
    },
@@ -1418,7 +1418,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288151.759112,
+  "date": 1761799603.4311583,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
