--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6fe5fe51",
+   "id": "c32b48c4",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15428e3",
+   "id": "f2089675",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aab96df",
+   "id": "bd7a6127",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b2a4766",
+   "id": "2e0366d2",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da805f4",
+   "id": "6a3acac2",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39bbda4d",
+   "id": "87762d2a",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad64b1cc",
+   "id": "79ce542f",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aec882e",
+   "id": "060c59a8",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -102,7 +102,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288151.8000457,
+  "date": 1761799603.47068,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
