--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7cd6d2f",
+   "id": "ce79b7a0",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d506621",
+   "id": "290e5565",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f04d08",
+   "id": "a2e8dcf3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7d6ee82",
+   "id": "674653c5",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c7f008",
+   "id": "db534746",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a9d5cd8",
+   "id": "db473c97",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a47cf9f",
+   "id": "6a005163",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "519c8656",
+   "id": "91b35266",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90141b09",
+   "id": "2ceefe2e",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0e99da",
+   "id": "2da08938",
    "metadata": {
     "hide-output": false
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e66439",
+   "id": "a17b44e7",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad419a66",
+   "id": "d7ca7478",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "416cd6ce",
+   "id": "cc43cc42",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac3c5446",
+   "id": "0edb95ff",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24387a96",
+   "id": "be16a581",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48d4a313",
+   "id": "ab50a662",
    "metadata": {
     "hide-output": false
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d918ca1",
+   "id": "ac26db1a",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "788c4105",
+   "id": "ccf1f17d",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e074646c",
+   "id": "d7c74945",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecbd2139",
+   "id": "83a477fa",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7f2e87",
+   "id": "a3125114",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7de97b9",
+   "id": "92e16d73",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ecc3af",
+   "id": "e857a6aa",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "501d062a",
+   "id": "7d62b275",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5485db",
+   "id": "fa12a162",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e3a1212",
+   "id": "7f4dadc5",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7959f8ad",
+   "id": "73d5a6ee",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec94c134",
+   "id": "9ba17cfc",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe84555b",
+   "id": "f01e2cff",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04886060",
+   "id": "90f8cecb",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a1f279",
+   "id": "0a9fd539",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6979225",
+   "id": "78724aba",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d66412",
+   "id": "3ea226f0",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb6250a8",
+   "id": "bebf08ae",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce42a04",
+   "id": "4681dba1",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c9122c",
+   "id": "1f55c701",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7593e29d",
+   "id": "0feb550d",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d895c24",
+   "id": "bde27268",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604d00fe",
+   "id": "da95d86f",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdd40065",
+   "id": "c76c3652",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49fb89e9",
+   "id": "4dc98f96",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f1fe895",
+   "id": "d81e07c5",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e40464",
+   "id": "7ec955ac",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bf67cff",
+   "id": "2d51ae02",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440d2bbc",
+   "id": "5e23b822",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee71aeeb",
+   "id": "29aa530d",
    "metadata": {
     "hide-output": false
    },
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62833634",
+   "id": "cc16d93e",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac81f2e0",
+   "id": "5ec87417",
    "metadata": {
     "hide-output": false
    },
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c8bfe4c",
+   "id": "a471ebff",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288151.823076,
+  "date": 1761799603.4928727,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
