--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5fd5d0ee",
+   "id": "3e34dfb0",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84a4416f",
+   "id": "b6eac2da",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26ae8971",
+   "id": "0b4fcbae",
    "metadata": {
     "hide-output": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d08da857",
+   "id": "b961870a",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45d7552",
+   "id": "0298b307",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1bb7afa",
+   "id": "b22efebd",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00eafe4f",
+   "id": "52146a57",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0278451c",
+   "id": "471b6d01",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf91d91",
+   "id": "0ab828a8",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a8ce7b7",
+   "id": "d5f41a49",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0752413f",
+   "id": "c5c6d540",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569fbecf",
+   "id": "92c22c38",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed53384",
+   "id": "8413fa00",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e6c715",
+   "id": "6fedac04",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cecc793",
+   "id": "5f6070e0",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f67d557d",
+   "id": "5a49393e",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f344e950",
+   "id": "a1e86109",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bcb589f",
+   "id": "91b0dfcd",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ea36d6d",
+   "id": "ed351574",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2841f3b7",
+   "id": "cb0c12f7",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f5ca21c",
+   "id": "59915125",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4200d062",
+   "id": "6c5f4b5d",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70c91832",
+   "id": "3271ad82",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d3e616",
+   "id": "972a39c0",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c2a5d7b",
+   "id": "837c7c7c",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7558b03c",
+   "id": "c1b944d0",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3fd1187",
+   "id": "e68604de",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be43ceb8",
+   "id": "704bd774",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcef66f0",
+   "id": "506b9c60",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "443e580b",
+   "id": "8027af34",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4505d158",
+   "id": "7b795c27",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a118939",
+   "id": "c6b62518",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b497559",
+   "id": "e4f5501b",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77530418",
+   "id": "3e5373f1",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb6fe91",
+   "id": "afdc0482",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "724fbc7f",
+   "id": "22de08b3",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34aa3f08",
+   "id": "38c933ff",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c736e06",
+   "id": "92d7f3d4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "712d1d91",
+   "id": "b03616d4",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4362222a",
+   "id": "df19d9d9",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566f3d3c",
+   "id": "109856c5",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46eca5d7",
+   "id": "a42433a6",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5531e471",
+   "id": "8d993d74",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -692,7 +692,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288151.964571,
+  "date": 1761799603.6230803,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
