--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "55f4ab67",
+   "id": "66b92b25",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ab2f6e9",
+   "id": "88a704e1",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d55d743",
+   "id": "c3afdc19",
    "metadata": {
     "hide-output": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313adb3c",
+   "id": "9ff56f49",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f01bbe",
+   "id": "05af95b5",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794dbf7c",
+   "id": "00de1662",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94601df8",
+   "id": "2bc913f2",
    "metadata": {
     "hide-output": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a0a6811",
+   "id": "21a4f3e6",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2825c02",
+   "id": "191b0201",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacf4be5",
+   "id": "89c941f5",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0852a8b1",
+   "id": "0f6b59ac",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e85c7c30",
+   "id": "4fad2498",
    "metadata": {
     "hide-output": false
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d09bb3",
+   "id": "36e19908",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ec86b9",
+   "id": "4e7afb09",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1f0156",
+   "id": "343e2e36",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35020830",
+   "id": "4808b763",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64a20e97",
+   "id": "9fe77c67",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa40b2f",
+   "id": "a887eea1",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "898e35a8",
+   "id": "8b05fff7",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e60e721",
+   "id": "d0462a24",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce31bd08",
+   "id": "99655a97",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0de1ea10",
+   "id": "86bae824",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60f00611",
+   "id": "c53e53e8",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d110e62f",
+   "id": "f81d95e5",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab604cd",
+   "id": "8d963ac6",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8cd7b7",
+   "id": "36f6092f",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d752342d",
+   "id": "05c19be0",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b42c2758",
+   "id": "9d15077f",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f6c8b43",
+   "id": "f1f328b6",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63862d1",
+   "id": "f31047f0",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "806abefd",
+   "id": "74caf5a2",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0630b14e",
+   "id": "44698647",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53efb547",
+   "id": "4de1457a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54f2b3fa",
+   "id": "7c43e1fd",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86972646",
+   "id": "e1257596",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f9f18c",
+   "id": "0e63adb1",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fbd0be4",
+   "id": "a2c581fd",
    "metadata": {
     "hide-output": false
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158129d1",
+   "id": "eee16a06",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -650,7 +650,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288152.009413,
+  "date": 1761799603.6663847,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
