--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "775c5840",
+   "id": "7e88f7a0",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd6f865",
+   "id": "f8afd90a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9481d6fe",
+   "id": "e7b5b537",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3fb11b3",
+   "id": "8be1647a",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbc9f0a",
+   "id": "14992a66",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a04ad393",
+   "id": "b8b8ab39",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7df8d576",
+   "id": "093af0e4",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3c11125",
+   "id": "99e921b1",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296cbe05",
+   "id": "7cfc6708",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b353e22d",
+   "id": "af5e3da9",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "142b2407",
+   "id": "a1c16d67",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d920d7d",
+   "id": "e7ec610d",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0795aa0",
+   "id": "56c6f687",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b80c4098",
+   "id": "870ac218",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "696e7b48",
+   "id": "5541f47c",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1628fed2",
+   "id": "a78d0da0",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e7b66e0",
+   "id": "3b689c40",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b1190e8",
+   "id": "7758f48f",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dd30f6f",
+   "id": "2b9681dd",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2518e256",
+   "id": "aa6e9fe8",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b149f456",
+   "id": "d2b36355",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f87f2a9b",
+   "id": "7d2d7164",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd63b183",
+   "id": "89259cf1",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdc99bd1",
+   "id": "c52da10a",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4e3bb8",
+   "id": "28d6935f",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139b4963",
+   "id": "782e3fab",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fea224e",
+   "id": "e154dd6f",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcb9ae17",
+   "id": "3e2dba42",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6eed814",
+   "id": "871eb1e8",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3be2f9e",
+   "id": "45983945",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba9e7da",
+   "id": "8e4e6fbc",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fd2626e",
+   "id": "55f1581c",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de346368",
+   "id": "afc1e468",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65b50fb6",
+   "id": "3d80f5ba",
    "metadata": {
     "hide-output": false
    },
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d765d1f8",
+   "id": "3ae53b1c",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48aa0113",
+   "id": "db205c2f",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32cce483",
+   "id": "049fed90",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f0902f5",
+   "id": "0ab99ead",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41da3272",
+   "id": "b3ca18c2",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6f5461b",
+   "id": "f5f1c963",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d66c9c9",
+   "id": "8387bc0f",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c09fbca2",
+   "id": "fdcebfbf",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded8e81a",
+   "id": "1fdbd687",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c0471e",
+   "id": "736bc077",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "998e46cd",
+   "id": "bdfa75a1",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e912dde",
+   "id": "60c526a4",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23a2ff23",
+   "id": "43be0c93",
    "metadata": {
     "hide-output": false
    },
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d15e5e9",
+   "id": "06e89809",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0036efc",
+   "id": "22e54d98",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "306c9cde",
+   "id": "f170dade",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51aa2df2",
+   "id": "1c4ab700",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18e7e6b",
+   "id": "fc333733",
    "metadata": {
     "hide-output": false
    },
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fee5474",
+   "id": "7767d02b",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4eeed9",
+   "id": "0ee03823",
    "metadata": {
     "hide-output": false
    },
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c6ec177",
+   "id": "0dce287c",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9dd174",
+   "id": "854c97e6",
    "metadata": {
     "hide-output": false
    },
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c11fe0",
+   "id": "628c0ab2",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9690eced",
+   "id": "9f2de0d1",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78068d9a",
+   "id": "7ed733be",
    "metadata": {
     "hide-output": false
    },
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "760e7b72",
+   "id": "f6b30a07",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0805f1b4",
+   "id": "3bd6bf6d",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b2fadc",
+   "id": "6437e865",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09dc1fb",
+   "id": "8e8786b7",
    "metadata": {
     "hide-output": false
    },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039d107c",
+   "id": "702e7818",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c6db857",
+   "id": "2e428f2f",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60b2b666",
+   "id": "e6ca9e5d",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e942ccbd",
+   "id": "852edbe8",
    "metadata": {
     "hide-output": false
    },
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a81843",
+   "id": "58e9caca",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e412470f",
+   "id": "5323b287",
    "metadata": {
     "hide-output": false
    },
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bbd714",
+   "id": "6be74e84",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4fae4ef",
+   "id": "7485ca62",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37925013",
+   "id": "ace50e26",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7a01ec8",
+   "id": "d180b486",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd7f7c1",
+   "id": "14ba9028",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b22a1f",
+   "id": "6b572e79",
    "metadata": {
     "hide-output": false
    },
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61476b3",
+   "id": "46da0210",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1580,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73bc17af",
+   "id": "f8df9e86",
    "metadata": {
     "hide-output": false
    },
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6c205a",
+   "id": "4f939e05",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea779eab",
+   "id": "1aa9b74f",
    "metadata": {
     "hide-output": false
    },
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8724ce2c",
+   "id": "6dcf84aa",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c457374c",
+   "id": "019f46e0",
    "metadata": {
     "hide-output": false
    },
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77702c31",
+   "id": "a588cf30",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1650,7 +1650,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288152.1129363,
+  "date": 1761799603.7618,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
