--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83bbb701",
+   "id": "ac589dcb",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2884a378",
+   "id": "5fff207a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f403e36",
+   "id": "437e5b79",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e32ec9",
+   "id": "8a06fdcd",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21f0608a",
+   "id": "a6d05a5c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18d4b8dd",
+   "id": "8569ce5b",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3d2fe9",
+   "id": "f340e13a",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5d8363f",
+   "id": "71be9fc8",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c76c583",
+   "id": "fb5171ca",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6927af08",
+   "id": "fc8a7f29",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8caf960a",
+   "id": "4997e8ce",
    "metadata": {},
    "source": [
     "Here we go"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7a0d3da",
+   "id": "c1413e16",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c11da16a",
+   "id": "86250b48",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c5e011",
+   "id": "9b0c3ad0",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "670f8e14",
+   "id": "d090b081",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8967be73",
+   "id": "9a50db89",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9ac600",
+   "id": "2dafb5c3",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7db8e8d6",
+   "id": "77d5c559",
    "metadata": {
     "hide-output": false
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149e5d46",
+   "id": "b17eaeae",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "987c4897",
+   "id": "002d44c0",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f96758b6",
+   "id": "481305b2",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626488c6",
+   "id": "899cb6db",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd94d2b4",
+   "id": "2dfdfdb1",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9924b5a",
+   "id": "94658a24",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a1ae762",
+   "id": "51def882",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "432d3bb9",
+   "id": "973cfef8",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c88fd6a8",
+   "id": "506eaf74",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9d49545",
+   "id": "8f9ae888",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2574e801",
+   "id": "329e0db7",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "683e5a20",
+   "id": "94bbc61d",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "091904b1",
+   "id": "2acb3330",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b67cc4c6",
+   "id": "0c6757ae",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8302a330",
+   "id": "1157983c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7b0a5e",
+   "id": "89fdba4a",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f893db3",
+   "id": "9d46f909",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e159d9bd",
+   "id": "ec9cb941",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654c4662",
+   "id": "8911c20d",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "526834d8",
+   "id": "bc5ea9f9",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b895e4c",
+   "id": "9508c454",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2f4dfad",
+   "id": "baaf6761",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fde7df0",
+   "id": "afca038a",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e794008f",
+   "id": "d07b0f79",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706f9195",
+   "id": "d25c3cd6",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f3f36a7",
+   "id": "572024cb",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f90e3a",
+   "id": "a0d59ef5",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d002c09d",
+   "id": "6d444ae5",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce82b90e",
+   "id": "f5058f16",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f709329",
+   "id": "19d5169e",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2ddfdc",
+   "id": "9bef1293",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac585ae5",
+   "id": "5b956ee4",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62081b24",
+   "id": "3cb6dd75",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f468784",
+   "id": "647d3244",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b6a1e0c",
+   "id": "e3f92518",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1de9558",
+   "id": "8f263bbf",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62693e0b",
+   "id": "6167227c",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba28a2fb",
+   "id": "753c3b21",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c947c1fc",
+   "id": "84c13eca",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -882,7 +882,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288152.1670978,
+  "date": 1761799603.817398,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
