--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bed07a8",
+   "id": "0b4a4f22",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -11,32 +11,32 @@
     "\n",
     "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/autodiff.html)[](https://jax.quantecon.org/hopenhayn.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/jax_nn.html)[](https://jax.quantecon.org/job_search.html)[](https://jax.quantecon.org/keras.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/lucas_model.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings_1.html)[](https://jax.quantecon.org/opt_savings_2.html)[](https://jax.quantecon.org/overborrowing.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2025-08-04 03:47|cache|74.95|✅|\n",
-    "|arellano|2025-08-04 03:47|cache|22.09|✅|\n",
-    "|autodiff|2025-08-04 03:48|cache|12.89|✅|\n",
-    "|hopenhayn|2025-08-04 03:48|cache|24.43|✅|\n",
-    "|ifp_egm|2025-08-04 03:51|cache|146.32|✅|\n",
-    "|intro|2025-08-04 03:51|cache|1.17|✅|\n",
-    "|inventory_dynamics|2025-08-04 03:51|cache|8.64|✅|\n",
-    "|inventory_ssd|2025-08-04 04:29|cache|2270.06|✅|\n",
-    "|jax_intro|2025-08-04 04:29|cache|37.25|✅|\n",
-    "|jax_nn|2025-08-04 04:31|cache|91.88|✅|\n",
-    "|job_search|2025-08-04 04:31|cache|9.79|✅|\n",
-    "|keras|2025-08-04 04:31|cache|27.06|✅|\n",
-    "|kesten_processes|2025-08-04 04:32|cache|11.06|✅|\n",
-    "|lucas_model|2025-08-04 04:32|cache|19.69|✅|\n",
-    "|markov_asset|2025-08-04 04:32|cache|11.22|✅|\n",
-    "|mle|2025-08-04 04:32|cache|15.04|✅|\n",
-    "|newtons_method|2025-08-04 04:35|cache|182.84|✅|\n",
-    "|opt_invest|2025-08-04 04:36|cache|22.42|✅|\n",
-    "|opt_savings_1|2025-08-04 04:36|cache|45.65|✅|\n",
-    "|opt_savings_2|2025-08-04 04:37|cache|20.28|✅|\n",
-    "|overborrowing|2025-08-04 04:37|cache|22.93|✅|\n",
-    "|short_path|2025-08-04 04:37|cache|4.1|✅|\n",
-    "|status|2025-08-04 06:14|cache|6.87|✅|\n",
-    "|troubleshooting|2025-08-04 03:51|cache|1.17|✅|\n",
-    "|wealth_dynamics|2025-08-04 04:40|cache|154.77|✅|\n",
-    "|zreferences|2025-08-04 03:51|cache|1.17|✅|\n",
+    "|aiyagari_jax|2025-10-27 03:38|cache|102.27|✅|\n",
+    "|arellano|2025-10-27 03:38|cache|22.02|✅|\n",
+    "|autodiff|2025-10-27 03:39|cache|13.05|✅|\n",
+    "|hopenhayn|2025-10-27 03:39|cache|24.34|✅|\n",
+    "|ifp_egm|2025-10-27 03:41|cache|145.29|✅|\n",
+    "|intro|2025-10-27 03:41|cache|0.91|✅|\n",
+    "|inventory_dynamics|2025-10-27 03:42|cache|8.57|✅|\n",
+    "|inventory_ssd|2025-10-27 03:42|cache|9.32|✅|\n",
+    "|jax_intro|2025-10-27 03:42|cache|36.37|✅|\n",
+    "|jax_nn|2025-10-27 03:44|cache|89.23|✅|\n",
+    "|job_search|2025-10-27 03:44|cache|9.81|✅|\n",
+    "|keras|2025-10-27 03:44|cache|27.42|✅|\n",
+    "|kesten_processes|2025-10-27 03:45|cache|11.46|✅|\n",
+    "|lucas_model|2025-10-27 03:45|cache|17.95|✅|\n",
+    "|markov_asset|2025-10-27 03:45|cache|11.34|✅|\n",
+    "|mle|2025-10-27 03:45|cache|15.05|✅|\n",
+    "|newtons_method|2025-10-27 03:48|cache|178.31|✅|\n",
+    "|opt_invest|2025-10-27 03:49|cache|22.28|✅|\n",
+    "|opt_savings_1|2025-10-27 03:49|cache|45.1|✅|\n",
+    "|opt_savings_2|2025-10-27 03:50|cache|20.55|✅|\n",
+    "|overborrowing|2025-10-27 03:50|cache|24.18|✅|\n",
+    "|short_path|2025-10-27 03:50|cache|4.16|✅|\n",
+    "|status|2025-10-27 03:50|cache|7.11|✅|\n",
+    "|troubleshooting|2025-10-27 03:41|cache|0.91|✅|\n",
+    "|wealth_dynamics|2025-10-27 03:54|cache|194.1|✅|\n",
+    "|zreferences|2025-10-27 03:41|cache|0.91|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions` that has\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dac29f4",
+   "id": "b2f31c34",
    "metadata": {
     "hide-output": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb818d22",
+   "id": "1f551f4d",
    "metadata": {},
    "source": [
     "and the following package versions"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f1fc49",
+   "id": "29b52253",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eb7bb33",
+   "id": "f05ce891",
    "metadata": {},
    "source": [
     "You can check the backend used by JAX using:"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43fe5edc",
+   "id": "44d58523",
    "metadata": {
     "hide-output": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ccf89c6",
+   "id": "80f2835a",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "860627ce",
+   "id": "a48e952a",
    "metadata": {
     "hide-output": false
    },
@@ -121,7 +121,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288152.3534105,
+  "date": 1761799603.995186,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
