--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd9f026b",
+   "id": "1939d2dc",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "463ff07b",
+   "id": "69df0919",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "832ce5d8",
+   "id": "0044cfcd",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a727ae4",
+   "id": "6a571118",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c5dfed",
+   "id": "bd87a114",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33a5ca10",
+   "id": "58aca926",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "228471f3",
+   "id": "3c625c74",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa424ad",
+   "id": "370ed73d",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d981670f",
+   "id": "b14d8070",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4f0fe3",
+   "id": "58e4a7cf",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb765c9",
+   "id": "3b7d9776",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1049ed2a",
+   "id": "74469a91",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd68e8cf",
+   "id": "275ab139",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d7ccfa0",
+   "id": "710b5e4b",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff96d02",
+   "id": "bf45c1e1",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21dc0e44",
+   "id": "a342be44",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "267ab774",
+   "id": "c535e36c",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4ffe04",
+   "id": "5668af3a",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea54c6c0",
+   "id": "e703de65",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b3598f",
+   "id": "db9ae559",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef096b42",
+   "id": "20d51a6a",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b5a5ef",
+   "id": "664e1453",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c59b78b",
+   "id": "1ab7196a",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daea30f5",
+   "id": "dda4aa3d",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "704d8269",
+   "id": "98929416",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "277f2fc3",
+   "id": "7f18f78e",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3693723e",
+   "id": "58200e43",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c767638",
+   "id": "26173645",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c56ae366",
+   "id": "5cdc572a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c25ae94",
+   "id": "6d666d8c",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106fbea7",
+   "id": "2f590b91",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "652c2773",
+   "id": "922246db",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471f07eb",
+   "id": "744360f2",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9f3bfcc",
+   "id": "dad6278b",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a646f5",
+   "id": "3d8f8832",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b88ab668",
+   "id": "b0a78416",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93f9bcd",
+   "id": "1ead4c9e",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0617ed25",
+   "id": "28328be5",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4bca9e",
+   "id": "25007cf6",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd7e0a8",
+   "id": "fb85e5bb",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc8a1a72",
+   "id": "4e8e1784",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a34448",
+   "id": "0b778ab9",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea631754",
+   "id": "287b76a0",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "508877bd",
+   "id": "d3b2991f",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6aa2184",
+   "id": "e9c57566",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56af8064",
+   "id": "ea91532e",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1034424e",
+   "id": "beba79dd",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dec9fab",
+   "id": "95bdbe65",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "718de3ff",
+   "id": "5c77bdb9",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e887ea58",
+   "id": "89884a65",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94689c2d",
+   "id": "6ed1a0eb",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe668ace",
+   "id": "c5e4202b",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80742b05",
+   "id": "1df3c797",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec032644",
+   "id": "34a75050",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99588259",
+   "id": "585edcc2",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1072a3a",
+   "id": "04c82c0b",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1afdb32d",
+   "id": "a3d7b55a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1a6618f",
+   "id": "9e0c6715",
    "metadata": {
     "hide-output": false
    },
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a17b1b7a",
+   "id": "f0cf1ced",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd11810",
+   "id": "7777036a",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e6d4e5",
+   "id": "ed168118",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a5d805",
+   "id": "5e3faee1",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b269fbf8",
+   "id": "bae520c4",
    "metadata": {
     "hide-output": false
    },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6151ef",
+   "id": "bb3fc438",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02f665d9",
+   "id": "ebbe0ec7",
    "metadata": {
     "hide-output": false
    },
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8ada41",
+   "id": "98d073da",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "939fd359",
+   "id": "a1a05c88",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "497519e4",
+   "id": "a4636229",
    "metadata": {
     "hide-output": false
    },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940da044",
+   "id": "e3ca11b1",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d78a77a",
+   "id": "21e8d72c",
    "metadata": {
     "hide-output": false
    },
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d131a752",
+   "id": "bf73d124",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad4f7b83",
+   "id": "d9efcd24",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60ac1ba7",
+   "id": "b4de9192",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3cf2ec",
+   "id": "f19cfc91",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558ce32a",
+   "id": "f676bb6d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd0ca2d",
+   "id": "d98c244a",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb2d98f",
+   "id": "ffb60a96",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1b0b29",
+   "id": "1358e63a",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a8af725",
+   "id": "0fdb1c0a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eed3f306",
+   "id": "66105490",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288152.391842,
+  "date": 1761799604.0316837,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
