--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af4ec93d",
+   "id": "b3de17ad",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef58e2f",
+   "id": "d6be41dd",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4c44a41",
+   "id": "b2ae0de9",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d786f930",
+   "id": "e7af2afb",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc85108",
+   "id": "72f67355",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c531f835",
+   "id": "8d852943",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f4c890",
+   "id": "f5f6a3d3",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9298ca0",
+   "id": "71ca1b90",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c7f8316",
+   "id": "d6472bbe",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72bf79a3",
+   "id": "b12b7085",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d369a74c",
+   "id": "b02c0a8b",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f04513",
+   "id": "07091413",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74cacd12",
+   "id": "79e7072d",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3004b72a",
+   "id": "23e6c190",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27cf5a69",
+   "id": "ac9a0e62",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d1ad0f",
+   "id": "918a5df2",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56bd5eb1",
+   "id": "d03bc115",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee2d64f",
+   "id": "60419050",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf127479",
+   "id": "95ab208c",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddc2c1e",
+   "id": "988845f2",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3f6d74f",
+   "id": "8c5e6198",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61f20fa",
+   "id": "1e64e4e3",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe65fda",
+   "id": "7a23be7e",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "693b858c",
+   "id": "26a27112",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db6bd2c8",
+   "id": "28848193",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08797d7c",
+   "id": "3f80f91e",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb0f517b",
+   "id": "4c7db877",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7a937e7",
+   "id": "b9ad9da5",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38bb3f7",
+   "id": "bc846b30",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e23e40",
+   "id": "196f054d",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a73a8b",
+   "id": "59082db7",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e0bf48",
+   "id": "25358523",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "407ad5ec",
+   "id": "deb22a79",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8680d6",
+   "id": "fffe72f3",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8599103d",
+   "id": "364e29d9",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611134ef",
+   "id": "ba1c2d9d",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -821,7 +821,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288151.787161,
+  "date": 1761799603.4582753,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
