--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f325d97b",
+   "id": "737fac5f",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d517ce",
+   "id": "30b70777",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac330a26",
+   "id": "3441e628",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7241e30",
+   "id": "ef4f4b9f",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23423dc4",
+   "id": "4bcbea51",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c2c83eb",
+   "id": "2c1a72f8",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66d3e6a7",
+   "id": "395c8bf9",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c5b91f2",
+   "id": "20a91956",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6cc6bcc",
+   "id": "47d295e7",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dee92fd",
+   "id": "1310991a",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cc5b05b",
+   "id": "3c96db68",
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb5a5c40",
+   "id": "415db6a6",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eee2a5d",
+   "id": "caee32af",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b93e63",
+   "id": "3e969e59",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "800a751d",
+   "id": "1e5b938f",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf87ab03",
+   "id": "af91bf43",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8b9c33c",
+   "id": "080c3aa5",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e75e05f",
+   "id": "55fc5d34",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46d50212",
+   "id": "fe210fcf",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a35c0c38",
+   "id": "5a1d79f3",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d431ac6",
+   "id": "4fbaccd1",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d7dc6df",
+   "id": "4706d746",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3155d643",
+   "id": "49981fa5",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5256d55b",
+   "id": "059e2a1f",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a20251f",
+   "id": "4ea7b3b9",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3b55cd6",
+   "id": "0f94dc0a",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b577d2cd",
+   "id": "61e74bd4",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69335db5",
+   "id": "1154cb35",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d773908e",
+   "id": "1c62813e",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b423803",
+   "id": "6e682bc6",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929ee634",
+   "id": "8cad99bd",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43bac6f3",
+   "id": "aeb9deca",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a42221e",
+   "id": "8fe33701",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63aa6a78",
+   "id": "741546c5",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c542ec",
+   "id": "2843b5cc",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d92b3197",
+   "id": "34c5d541",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "532fa5e8",
+   "id": "6a399bd2",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4d586bf",
+   "id": "9c733889",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e82646",
+   "id": "ed2ef161",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c50f37c2",
+   "id": "9f5411a2",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0105c6b7",
+   "id": "7f3cb2e0",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b2febb",
+   "id": "2cb6a0d1",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be77b438",
+   "id": "a14b7715",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41b928b7",
+   "id": "c28a1a76",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c3e4691",
+   "id": "ac8c8ebe",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b197d336",
+   "id": "eac6a245",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce4bec80",
+   "id": "9deabd23",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef03b46",
+   "id": "2f8acc46",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e20f5d1",
+   "id": "ec73b8d2",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d4d7e1",
+   "id": "eeb12850",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c6dafee",
+   "id": "f929ed8d",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -670,7 +670,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288151.9866433,
+  "date": 1761799603.644538,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
