--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed0f84ba",
+   "id": "9f8212fb",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e140beac",
+   "id": "755c4b8b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6015738",
+   "id": "e3bb971b",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1ca653",
+   "id": "3b34c06f",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32a24d38",
+   "id": "315371d0",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21fd7081",
+   "id": "67cc2ca0",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "960405c1",
+   "id": "db01b137",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e60d50c",
+   "id": "1fad0314",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf0e56a",
+   "id": "18e4b7cd",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43a18b7",
+   "id": "61e4cf07",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10520fb9",
+   "id": "9e716b3c",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb3fb60",
+   "id": "2673a5ad",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24d119f7",
+   "id": "7f20f85c",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3be2cff",
+   "id": "0d401852",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fbadce0",
+   "id": "41ac16a3",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f28cf45a",
+   "id": "90a3220b",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1272ebb2",
+   "id": "449aa4f5",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca2ee584",
+   "id": "ddbb8b35",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47b5ea3f",
+   "id": "d8cf9149",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "659eab3c",
+   "id": "d8a2f769",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aceaa95e",
+   "id": "003a5b7f",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a2375b",
+   "id": "b232cbda",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44a977fe",
+   "id": "36310a08",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd240dc2",
+   "id": "d2ee4989",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccf907e8",
+   "id": "adcb67f0",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47e1d01c",
+   "id": "6007c581",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30eb5eed",
+   "id": "daf5c3e2",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e60afdc",
+   "id": "a7526588",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86f332f8",
+   "id": "840f72fa",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e4508a",
+   "id": "e125027c",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53f75f34",
+   "id": "17ebb14c",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65cff344",
+   "id": "61082785",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73174ecf",
+   "id": "d99e5da3",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6b6eb67",
+   "id": "dda44aa8",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2a6ea1c",
+   "id": "d0505d02",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac01a53",
+   "id": "f255a9ba",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb393570",
+   "id": "7c05b0e5",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2983e0d",
+   "id": "519f1d46",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51dea8ee",
+   "id": "2f045cc5",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f6d83c7",
+   "id": "549b7b14",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fffcdbc7",
+   "id": "12e06799",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b8d2286",
+   "id": "eae8a21a",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "870dc99f",
+   "id": "73b5a2bd",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "527f9cfb",
+   "id": "0cd5ec32",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19aecd8f",
+   "id": "a855b535",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be065b36",
+   "id": "9f467989",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ebd8a0",
+   "id": "11715000",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c79719c",
+   "id": "0f627ff1",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "616ff91c",
+   "id": "4a381250",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b0a797",
+   "id": "6826ba92",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accf1f79",
+   "id": "dae20c5b",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abc75a5f",
+   "id": "f5c0e6a7",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65dc9119",
+   "id": "f9d959b5",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b916bcf",
+   "id": "0c0a3a31",
    "metadata": {
     "hide-output": false
    },
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2277c8",
+   "id": "755dbdbf",
    "metadata": {
     "hide-output": false
    },
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addcf087",
+   "id": "6f22899c",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dddc11fa",
+   "id": "93173992",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53200973",
+   "id": "e6e205eb",
    "metadata": {
     "hide-output": false
    },
@@ -978,7 +978,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288152.1938064,
+  "date": 1761799603.842872,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
