--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25f7843e",
+   "id": "bd8e8d65",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a8b0706",
+   "id": "8d5b5a06",
    "metadata": {},
    "source": [
     "# References\n",
@@ -28,7 +28,7 @@
   }
  ],
  "metadata": {
-  "date": 1754288152.398609,
+  "date": 1761799604.0380669,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
